--- a/index.html
+++ b/index.html
@@ -27,24 +27,21 @@
       <!--Principal-->
       <div class="background">
       <div class="row">
-        <div class="col-sm text-center">
-          <img src="assets/images/logo-pink.png" id="pink" class="img-fluid max-width: 100%" alt="logo">
+        <div class="col-12 text-center">
+          <img src="assets/images/logo-pink.png" id="pink" class="img-fluid max-width: 100% height: auto" alt="logo">
         </div>
       </div>
       <!--Botones Sesión-->
       <div class="row">
-
         <div class="col-sm text-center">
-
-          <button type="button" class="btn light" name="button">Log In</button>
-
-          <button type="button" class="btn light" name="button" href="#sing-up" data-toggle="modal" >Sing Up</button>
+          <button type="button" class="btn light btn-lg" name="button">Log In</button>
+          <button type="button" class="btn light btn-lg" name="button" href="#sing-up" data-toggle="modal" >Sing Up</button>
 
           <!--Modal Log In-->
 
           <div class="modal fade" id="sing-up">
             <div class="modal-dialog">
-              <div class="modal-content">
+              <div class="modal-content" id="container-sng">
               <!--Parte inicial-->
                 <div class="modal-header text-center" id="sesion">
                   <h2 class="text-center"><i class="fa fa-angle-left" aria-hidden="true"></i>
@@ -71,10 +68,17 @@
               <div class="col-8">
                 <input type="text" class="form-control" placeholder="phone Number">
               </div>
-
-            </div class="modal-body form-row">
-                <button type="submit" class="btn btn-default text-center">Next</button>
+              <div class="modal-body form-row text-center message">
+                <div class="col-12">
+                  <p>We´ll send you a text to verify your phone</p>
                 </div>
+              </div>
+              <div class="modal-body form-row text-center">
+                <div class="col-12">
+                <button type="submit" class="btn btn-default text-center btn-lg" id="modal-btn">Next</button>
+                </div>
+
+              </div>
 
                 </form>
                 </div>
