--- a/index.html
+++ b/index.html
@@ -7,30 +7,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Foodmap</title>
-    <!--Fuentes-->
+    <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Corben" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nobile" rel="stylesheet">
-    <!--Fontawesome-->
+    <!--Icons from Fontawesome-->
     <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css" rel="stylesheet"/>
-    <!--Estilos-->
+    <link rel="stylesheet" href="assets/build/css/intlTelInput.css">
+    <!--CSS-->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <body>
-    <!--Vista splash-->
+    <!--splash-->
     <div id="splash">
-    <div class="splash">
-      <center>
-        <img src="assets/images/logo-white.png" id="logo"   alt="cover-splash">
-      </center>
+      <div class="splash">
+        <center>
+          <img src="assets/images/logo-white.png" id="logo"   alt="cover-splash">
+        </center>
       </div>
-      </div>
+    </div>
       <!--Principal-->
       <div class="background">
-      <div class="row">
-        <div class="col-12 text-center">
-          <img src="assets/images/logo-pink.png" id="pink" class="img-fluid max-width: 100% height: auto" alt="logo">
+        <div class="row">
+          <div class="col-12 text-center">
+            <img src="assets/images/logo-pink.png" id="pink" class="img-fluid max-width: 100% height: auto" alt="logo">
+          </div>
         </div>
-      </div>
       <!--Botones Sesión-->
       <div class="row">
         <div class="col-sm text-center">
@@ -56,31 +57,18 @@
                 </div>
               <!--Datos-->
               <div class=" modal-body form-row">
-                <div class="col-3">
-
-                <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
-                  <option img selected>Choose...</option>
-                  <option  value="MX">México</option>
-                  <option  value="CAN">Cánada</option>
-                  <option  value="BRZ">Brazil</option>
-                </select>
-              </div>
-              <div class="col-8">
-                <input type="text" class="form-control" placeholder="phone Number">
-              </div>
-              <div class="modal-body form-row text-center message">
-                <div class="col-12">
-                  <p>We´ll send you a text to verify your phone</p>
-                </div>
-              </div>
-              <div class="modal-body form-row text-center">
-                <div class="col-12">
-                <button type="submit" class="btn btn-default text-center btn-lg" id="modal-btn">Next</button>
-                </div>
-
-              </div>
-
-                </form>
+                <div class="col-xs-12 col-12 text-center">
+                  <input type="tel" id="demo" placeholder="phone number">
+                    <div class="modal-body form-row text-center message">
+                      <div class="col-12">
+                        <p>We´ll send you a text to verify your phone</p>
+                      </div>
+                    </div>
+                  <div class="modal-body form-row text-center">
+                    <div class="col-12">
+                      <button id="aleatory" type="submit" class="btn btn-default text-center btn-lg" id="modal-btn">Next</button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -93,7 +81,6 @@
 
 
 
-
       </div>
     </div>
 
@@ -103,18 +90,17 @@
 
     <!--Enlace funcionalidad jquery-->
 
-    <script
-  src="https://code.jquery.com/jquery-3.2.1.js"
-  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-  crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <!--enlace jquery Funcionalidad bootstrap-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 
-    <!--enlace bootstrap JS-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <!--Otros-->
+  <script src="assets/build/js/intlTelInput.js"></script>
+  <script type="text/javascript" src="js/jquery.js"></script>
+
+  <!--enlace bootstrap JS-->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <!--Enlace archivos JS-->
-  <script type="text/javascript" src="js/jquery.js"></script>
-  <script type="text/javascript" src="js/app.js"></script>
+
   </body>
 </html>
